[gd_scene load_steps=20 format=3 uid="uid://y28k0n87xw1m"]

[ext_resource type="Script" path="res://scenes/platforms_addons.gd" id="1_3y7oa"]
[ext_resource type="Texture2D" uid="uid://c5t16df44xue5" path="res://resources/platforms_addons/no_behavior.png" id="1_o8oen"]
[ext_resource type="Texture2D" uid="uid://f4h57r1gsdfp" path="res://resources/platforms_addons/spikes_top.png" id="2_b2lvp"]
[ext_resource type="Texture2D" uid="uid://byhi6wmrdenef" path="res://resources/platforms_addons/spike_top.png" id="3_ydkjq"]
[ext_resource type="Texture2D" uid="uid://c6lqsnmrormq2" path="res://resources/platforms_addons/spring.png" id="4_88w5e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6inhl"]
atlas = ExtResource("1_o8oen")
region = Rect2(0, 0, 117, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d2y7"]
atlas = ExtResource("1_o8oen")
region = Rect2(117, 0, 117, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldvun"]
atlas = ExtResource("1_o8oen")
region = Rect2(234, 0, 117, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qffss"]
atlas = ExtResource("1_o8oen")
region = Rect2(351, 0, 117, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp63s"]
atlas = ExtResource("1_o8oen")
region = Rect2(468, 0, 117, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks5ti"]
atlas = ExtResource("1_o8oen")
region = Rect2(585, 0, 117, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y875"]
atlas = ExtResource("1_o8oen")
region = Rect2(702, 0, 117, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rncju"]
atlas = ExtResource("4_88w5e")
region = Rect2(0, 0, 145, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysqrl"]
atlas = ExtResource("4_88w5e")
region = Rect2(145, 0, 145, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnth3"]
atlas = ExtResource("4_88w5e")
region = Rect2(290, 0, 145, 110)

[sub_resource type="SpriteFrames" id="SpriteFrames_41ipd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6inhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d2y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldvun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qffss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp63s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks5ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y875")
}],
"loop": false,
"name": &"no_behavior",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ydkjq")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b2lvp")
}],
"loop": false,
"name": &"spikes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rncju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysqrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnth3")
}],
"loop": false,
"name": &"spring",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7n7oy"]
size = Vector2(144, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l56xn"]
size = Vector2(67, 54)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qicqw"]
radius = 17.0
height = 88.0

[node name="platforms_addons" type="Node2D"]
script = ExtResource("1_3y7oa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_41ipd")
animation = &"spike"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShapeSpring" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 26)
shape = SubResource("RectangleShape2D_7n7oy")

[node name="CollisionShape2DSpikes" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_l56xn")

[node name="CollisionShape2DSpike" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_qicqw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
